--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "ejs": "^3.1.7",
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "eslint": "^8.14.0"
   }
 }
