--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
-    "eslint": "^8.14.0"
+    "chai": "^4.3.6",
+    "eslint": "^8.14.0",
+    "mocha": "^9.2.2"
   }
 }
